--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "node": ">=14.2.0"
   },
   "scripts": {
-    "lint": "eslint --ext .js,.jsx scripts test && ./scripts/lint/check-filenames.sh && shellcheck scripts/*.sh scripts/*/*.sh deploy-templates/*.sh && deplint && depcheck --ignore-bin-package --ignores=@balena/jellyfish-*",
+    "lint": "eslint --ext .js,.jsx scripts test && npm run lint:check && npm run lint:deps",
+    "lint:check": "./scripts/lint/check-filenames.sh && shellcheck scripts/*.sh scripts/*/*.sh deploy-templates/*.sh",
+    "lint:deps": "deplint && depcheck --ignore-bin-package --ignores=@balena/jellyfish-*",
+    "lint:catch": "catch-uncommitted --skip-node-versionbot-changes --exclude=VERSION,.versionbot/",
     "test:e2e:sdk": "ava ./test/e2e/sdk/*.spec.js",
     "test:e2e:livechat": "ava ./test/e2e/livechat/**/*.spec.js",
     "postgres": "docker run -i --rm -p5432:5432 balena/open-balena-db:4.1.0",
     "redis": "docker run -i --rm -p6379:6379 balena/balena-redis:0.0.3 sh -c \"redis-server /usr/local/etc/redis/redis.conf --save ''\"",
     "docs": "(cd apps/livechat && npm run doc); (cd apps/server && npm run doc); (cd apps/ui && npm run doc)",
+    "docs:diagram": "mmdc -i docs/diagrams/architecture.mmd -o docs/assets/architecture.png -w 2560 -H 1600",
+    "docs:summary": "./scripts/architecture-summary.sh > ARCHITECTURE.md",
     "clean": "rimraf apps/*/packages/*",
-    "postinstall": "(cd apps/livechat && npm i); (cd apps/server && npm i); (cd apps/ui && npm i)"
+    "postinstall": "(cd apps/livechat && npm i); (cd apps/server && npm i); (cd apps/ui && npm i)",
+    "config:haproxy": "mkdir -p .tmp && ./scripts/template.js haproxy.manifest.tpl.json > .tmp/haproxy.manifest.json",
+    "config:compose": "HAPROXY_CONFIG=$(cat .tmp/haproxy.manifest.json | base64 | tr -d '\\n') ./scripts/template.js docker-compose.tpl.yml > docker-compose.yml"
   },
   "deplint": {
     "files": [
@@ -83,6 +90,7 @@
     "ava": "^3.15.0",
     "aws-sdk": "^2.1043.0",
     "bluebird": "^3.7.2",
+    "catch-uncommitted": "^2.0.0",
     "cli-spinner": "^0.2.10",
     "date-fns": "^2.27.0",
     "depcheck": "^1.4.2",
